Adjust h1 position to prevent overlap with header/navbar

--- a/src/components/home/MainImage.css
+++ b/src/components/home/MainImage.css
@@ -11,6 +11,7 @@
 }
 
 .main-image > .main-description {
+  margin-top: 0px;
   position: absolute;
   z-index: 1;
   width: 100%;
